--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,96 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: #eee;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(193, 195, 204, 0.123),
+      rgba(0, 0, 0, 0.541)
+    ),
+    url('./asset/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-attachment: fixed;
+}
+
+body * {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+.appWrapper {
+  display: block;
+  margin: 0 auto;
   text-align: center;
-}
+  border-left: 1.3px white solid;
+  border-right: 1.3px white solid;
+  border-top: 0.1px white solid;
+  border-bottom: 0.1px white solid;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+  max-width: 950px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(238, 238, 238, 0.664);
 }
 
-.App-link {
-  color: #61dafb;
+.spinner {
+  width: 70px;
+  margin: auto;
+  background: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchForm {
+  width: 700px;
+  padding: 50px 20px;
+  margin: 200px auto 70px auto;
+  background-color: rgba(42, 61, 102, 0.829);
+  border-radius: 5px;
+  border: 2px solid white;
+}
+.inputContainer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: 10px;
+}
+.searchInput {
+  display: block;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  outline: none !important;
+}
+.searchInput:focus {
+  transform: scale(1.05);
+  transition: all ease 300ms;
+}
+.plane {
+  margin: 0 10px;
+}
+.searchBtn {
+  background-color: transparent;
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.flightItem {
+  background: white;
+  width: 900px;
+  border: 3px solid blue;
+  margin: 10px auto;
 }
