--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,19 @@
   padding: 0;
 }
 
+* a {
+  text-decoration: none;
+}
+* a:visited,
+a {
+  color: black;
+}
+
 body {
   background: #eee;
   font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(193, 195, 204, 0.123),
-      rgba(0, 0, 0, 0.541)
-    ),
-    url('./asset/bg.png');
+  /* font-size: 16px; */
+  background-image: url('./asset/bg.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -23,7 +26,8 @@ body {
 
 body * {
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 16px;
+  color: #6059f1;
 }
 .appWrapper {
   display: block;
@@ -34,9 +38,9 @@ body * {
   border-top: 0.1px white solid;
   border-bottom: 0.1px white solid;
 
-  max-width: 950px;
+  max-width: 1200px;
   min-height: 100vh;
-  background-color: rgba(238, 238, 238, 0.664);
+  background-color: #595874a2;
 }
 
 .spinner {
@@ -49,7 +53,120 @@ body * {
   width: 700px;
   padding: 50px 20px;
   margin: 200px auto 70px auto;
-  background-color: rgba(42, 61, 102, 0.829);
+  /* background-color: rgba(42, 61, 102, 0.829); */
+  background: linear-gradient(
+      36deg,
+      rgba(177, 177, 177, 0.03) 0%,
+      rgba(177, 177, 177, 0.03) 16.667%,
+      rgba(95, 95, 95, 0.03) 16.667%,
+      rgba(95, 95, 95, 0.03) 33.334%,
+      rgba(237, 237, 237, 0.03) 33.334%,
+      rgba(237, 237, 237, 0.03) 50.001000000000005%,
+      rgba(28, 28, 28, 0.03) 50.001%,
+      rgba(28, 28, 28, 0.03) 66.668%,
+      rgba(174, 174, 174, 0.03) 66.668%,
+      rgba(174, 174, 174, 0.03) 83.33500000000001%,
+      rgba(51, 51, 51, 0.03) 83.335%,
+      rgba(51, 51, 51, 0.03) 100.002%
+    ),
+    linear-gradient(
+      195deg,
+      rgba(11, 11, 11, 0.02) 0%,
+      rgba(11, 11, 11, 0.02) 25%,
+      rgba(107, 107, 107, 0.02) 25%,
+      rgba(107, 107, 107, 0.02) 50%,
+      rgba(228, 228, 228, 0.02) 50%,
+      rgba(228, 228, 228, 0.02) 75%,
+      rgba(155, 155, 155, 0.02) 75%,
+      rgba(155, 155, 155, 0.02) 100%
+    ),
+    linear-gradient(
+      262deg,
+      rgba(234, 234, 234, 0.03) 0%,
+      rgba(234, 234, 234, 0.03) 16.667%,
+      rgba(191, 191, 191, 0.03) 16.667%,
+      rgba(191, 191, 191, 0.03) 33.334%,
+      rgba(236, 236, 236, 0.03) 33.334%,
+      rgba(236, 236, 236, 0.03) 50.001000000000005%,
+      rgba(85, 85, 85, 0.03) 50.001%,
+      rgba(85, 85, 85, 0.03) 66.668%,
+      rgba(222, 222, 222, 0.03) 66.668%,
+      rgba(222, 222, 222, 0.03) 83.33500000000001%,
+      rgba(38, 38, 38, 0.03) 83.335%,
+      rgba(38, 38, 38, 0.03) 100.002%
+    ),
+    linear-gradient(
+      34deg,
+      rgba(192, 192, 192, 0.03) 0%,
+      rgba(192, 192, 192, 0.03) 16.667%,
+      rgba(200, 200, 200, 0.03) 16.667%,
+      rgba(200, 200, 200, 0.03) 33.334%,
+      rgba(23, 23, 23, 0.03) 33.334%,
+      rgba(23, 23, 23, 0.03) 50.001000000000005%,
+      rgba(224, 224, 224, 0.03) 50.001%,
+      rgba(224, 224, 224, 0.03) 66.668%,
+      rgba(181, 181, 181, 0.03) 66.668%,
+      rgba(181, 181, 181, 0.03) 83.33500000000001%,
+      rgba(34, 34, 34, 0.03) 83.335%,
+      rgba(34, 34, 34, 0.03) 100.002%
+    ),
+    linear-gradient(
+      281deg,
+      rgba(11, 11, 11, 0.03) 0%,
+      rgba(11, 11, 11, 0.03) 20%,
+      rgba(29, 29, 29, 0.03) 20%,
+      rgba(29, 29, 29, 0.03) 40%,
+      rgba(91, 91, 91, 0.03) 40%,
+      rgba(91, 91, 91, 0.03) 60%,
+      rgba(239, 239, 239, 0.03) 60%,
+      rgba(239, 239, 239, 0.03) 80%,
+      rgba(19, 19, 19, 0.03) 80%,
+      rgba(19, 19, 19, 0.03) 100%
+    ),
+    linear-gradient(
+      268deg,
+      rgba(211, 211, 211, 0.02) 0%,
+      rgba(211, 211, 211, 0.02) 25%,
+      rgba(137, 137, 137, 0.02) 25%,
+      rgba(137, 137, 137, 0.02) 50%,
+      rgba(14, 14, 14, 0.02) 50%,
+      rgba(14, 14, 14, 0.02) 75%,
+      rgba(220, 220, 220, 0.02) 75%,
+      rgba(220, 220, 220, 0.02) 100%
+    ),
+    linear-gradient(
+      139deg,
+      rgba(248, 248, 248, 0.03) 0%,
+      rgba(248, 248, 248, 0.03) 12.5%,
+      rgba(185, 185, 185, 0.03) 12.5%,
+      rgba(185, 185, 185, 0.03) 25%,
+      rgba(243, 243, 243, 0.03) 25%,
+      rgba(243, 243, 243, 0.03) 37.5%,
+      rgba(13, 13, 13, 0.03) 37.5%,
+      rgba(13, 13, 13, 0.03) 50%,
+      rgba(99, 99, 99, 0.03) 50%,
+      rgba(99, 99, 99, 0.03) 62.5%,
+      rgba(193, 193, 193, 0.03) 62.5%,
+      rgba(193, 193, 193, 0.03) 75%,
+      rgba(241, 241, 241, 0.03) 75%,
+      rgba(241, 241, 241, 0.03) 87.5%,
+      rgba(38, 38, 38, 0.03) 87.5%,
+      rgba(38, 38, 38, 0.03) 100%
+    ),
+    linear-gradient(
+      52deg,
+      rgba(171, 171, 171, 0.02) 0%,
+      rgba(171, 171, 171, 0.02) 20%,
+      rgba(118, 118, 118, 0.02) 20%,
+      rgba(118, 118, 118, 0.02) 40%,
+      rgba(7, 7, 7, 0.02) 40%,
+      rgba(7, 7, 7, 0.02) 60%,
+      rgba(235, 235, 235, 0.02) 60%,
+      rgba(235, 235, 235, 0.02) 80%,
+      rgba(190, 190, 190, 0.02) 80%,
+      rgba(190, 190, 190, 0.02) 100%
+    ),
+    linear-gradient(90deg, rgb(74, 60, 136), rgb(212, 142, 246));
   border-radius: 5px;
   border: 2px solid white;
 }
@@ -87,10 +204,115 @@ body * {
   padding: 16px 31px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #2f6627;
+  outline: none !important;
 }
 .flightItem {
-  background: white;
-  width: 900px;
-  border: 3px solid blue;
-  margin: 10px auto;
+  display: grid;
+  width: 1000px;
+  grid-template-columns: 1fr 300px 1fr;
+  background: url('./asset/pattern.png');
+  /* rgba(242, 240, 243, 0.952) */
+  background: linear-gradient(rgba(130, 22, 184, 0.952)),
+    url('./asset/pattern.png');
+  /* border: 3px solid blue; */
+  margin: 60px auto;
+  padding: 10px 30px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.departureContainer {
+  text-align: left;
+}
+.middleContainer {
+  text-align: center;
+}
+.arrivalContainer {
+  text-align: right;
+}
+
+.small-text {
+  font-weight: 200;
+  text-decoration: underline;
+  font-size: 11px;
+}
+
+.small-medium-text {
+  font-weight: 200;
+  font-size: 14px;
+  border-bottom: 1px dashed gray;
+  display: inline;
+  position: relative;
+}
+.cursor-mouse {
+  cursor: pointer;
+}
+
+.popup {
+  visibility: hidden;
+  text-align: left;
+  position: absolute;
+  right: 0;
+  width: 300px;
+  /*height: 50px; */
+  background: #333;
+  border-radius: 5px;
+  color: white;
+  padding: 5px 10px;
+  margin: 5px;
+  z-index: 1;
+}
+.cursor-mouse:hover .popup {
+  visibility: visible;
+  transition: all ease 1000ms;
+}
+#plane-logo {
+  width: 40px;
+}
+.line {
+  position: absolute;
+  left: 200px;
+  top: -30px;
+  width: 600px;
+  height: 100px;
+  border-radius: 50%;
+  border: none;
+  border-top: 2px solid rgb(163, 209, 240);
+}
+
+.line-plane {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 245px;
+  top: -30px;
+  transform: rotate(33deg);
+}
+
+.line-plane-2 {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 245px;
+  top: -30px;
+  transform: rotate(57deg);
+}
+
+.book-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background: #3f3d56;
+  border-radius: 50px;
+}
+
+.book-btn:active,
+.book-btn:hover {
+  transform: scale(0.97);
+  transition: all ease 700ms;
 }
