--- a/src/App.css
+++ b/src/App.css
@@ -7,52 +7,48 @@
 * a {
   text-decoration: none;
 }
-* a:visited,
-a {
-  color: black;
-}
 
-body {
+html {
   background: #eee;
+}
+body {
   font-family: 'Montserrat', sans-serif;
-  /* font-size: 16px; */
+  height: 100vh;
   background-image: url('./asset/bg.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  height: 100vh;
   background-attachment: fixed;
+  background-position: center;
 }
 
 body * {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  color: #6059f1;
 }
 .appWrapper {
+  background-color: #595874a2;
   display: block;
+  max-width: 1200px;
+  min-height: 100vh;
   margin: 0 auto;
   text-align: center;
   border-left: 1.3px white solid;
   border-right: 1.3px white solid;
   border-top: 0.1px white solid;
   border-bottom: 0.1px white solid;
-
-  max-width: 1200px;
-  min-height: 100vh;
-  background-color: #595874a2;
 }
 
 .spinner {
   width: 70px;
   margin: auto;
-  background: none;
 }
 
 .searchForm {
   width: 700px;
   padding: 50px 20px;
   margin: 200px auto 70px auto;
+  border-radius: 5px;
+  border: 2px solid white;
   /* background-color: rgba(42, 61, 102, 0.829); */
   background: linear-gradient(
       36deg,
@@ -167,8 +163,6 @@ body * {
       rgba(190, 190, 190, 0.02) 100%
     ),
     linear-gradient(90deg, rgb(74, 60, 136), rgb(212, 142, 246));
-  border-radius: 5px;
-  border: 2px solid white;
 }
 .inputContainer {
   display: grid;
@@ -178,9 +172,9 @@ body * {
 .searchInput {
   display: block;
   width: 100%;
+  padding: 5px 10px;
   border: none;
   border-radius: 10px;
-  padding: 5px 10px;
   outline: none !important;
 }
 .searchInput:focus {
@@ -207,17 +201,16 @@ body * {
   outline: none !important;
 }
 .flightItem {
-  display: grid;
   width: 1000px;
+  display: grid;
   grid-template-columns: 1fr 300px 1fr;
-  background: url('./asset/pattern.png');
-  /* rgba(242, 240, 243, 0.952) */
-
-  /* border: 3px solid blue; */
   margin: 60px auto;
   padding: 10px 30px;
   position: relative;
+  background: url('./asset/pattern.png');
   border-radius: 5px;
+  /* rgba(242, 240, 243, 0.952) */
+  /* border: 3px solid blue; */
 }
 
 .departureContainer {
@@ -248,14 +241,13 @@ body * {
 }
 
 .popup {
-  visibility: hidden;
-  text-align: left;
+  width: 300px;
   position: absolute;
   right: 0;
-  width: 300px;
-  /*height: 50px; */
+  visibility: hidden;
   background: #333;
   border-radius: 5px;
+  text-align: left;
   color: white;
   padding: 5px 10px;
   margin: 5px;
@@ -269,14 +261,14 @@ body * {
   width: 40px;
 }
 .line {
+  width: 600px;
+  height: 100px;
   position: absolute;
   left: 200px;
   top: -30px;
-  width: 600px;
-  height: 100px;
-  border-radius: 50%;
   border: none;
   border-top: 2px solid rgb(163, 209, 240);
+  border-radius: 50%;
 }
 
 .line-plane {
@@ -299,10 +291,10 @@ body * {
 
 .book-btn {
   display: block;
-  margin: 0 auto;
-  padding: 10px;
   width: 200px;
   height: 40px;
+  margin: 0 auto;
+  padding: 10px;
   font-size: 20px;
   font-weight: bold;
   color: white;
